...
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="150dp"
        android:background="@color/posts_color"
        android:orientation="vertical"
        android:id="@+id/rateFacilityView"
        android:elevation="20dp">

        <TextView
            android:id="@+id/RateFacilityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:text="@string/comment_facility_title"
            android:textAlignment="center"
            android:textColor="@color/white_light"
            android:textSize="18dp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:secondaryProgressTint="@color/UBCyellow"
            android:progressTint="@color/UBCyellow"
            android:numStars="5"
...
            android:scaleY="0.7"
            android:rating="0.0"
            android:theme="@style/RatingBar"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="25dp"
            android:background="@color/UBCPurpleDark"
            android:ems="10"
            android:gravity="start|top"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_button_review"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:background="@color/UBCPurpleLight"
...
