<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/facility_background_color"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu.faclity.FacilityActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/facilityActivityView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white_solid"
            android:gravity="center">
            <ImageView
                android:foregroundGravity="center"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:scaleX="0.7"
                android:scaleY="0.7"/>
        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:numStars="5"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:stepSize="0.1"
            android:layout_gravity="center"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/facilityRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="130dp"
                android:maxLength="5"
                android:textSize="11dp"
                android:textColor="@color/facility_third_text_color"/>
            <TextView
                android:id="@+id/facilityNumberOfRates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginRight="130dp"
                android:textSize="11dp"
                android:textColor="@color/facility_third_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/facilityTitle"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:textColor="@color/facility_primary_text_color"
                android:textSize="28dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_rate"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/facilityDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_description"
            android:textColor="@color/facility_primary_text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/facilityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            android:textSize="14dp"
            android:textColor="@color/facility_third_text_color"/>

        <LinearLayout
            android:id="@+id/facilityMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@color/UBCBlue">
            <TextView
                android:id="@+id/facilityLocationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_location"
                android:textColor="@color/facility_secondary_text_color"
                android:textSize="20dp" />
            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="145dp" />
            <TextView
                android:id="@+id/facilityAddress"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="15dp"
                android:textColor="@color/facility_secondary_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facilityReviews"
            android:orientation="vertical">
            <TextView
                android:id="@+id/facilityReviewsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_reviews"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/facility_primary_text_color"
                android:textSize="20dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/facilityRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facilityReport"
            android:orientation="vertical"
            android:background="@color/facility_background_color">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/report_facility_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:backgroundTint="#ccb90e0a"
                android:text="Report This Facility"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>