...
                    android:layout_height="wrap_content"
                    android:id="@+id/downVoteCount"
                    android:text="3" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reportCommentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="12sp"
                    android:textColor="#626262"
                    android:textAllCaps="false"
                    android:gravity="center_vertical|end"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/white"
                    android:text="Report"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
...
